# Langchain

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  GIT_SETUP.md  README.md  pyproject.toml  requirements.txt  setup.cfg
Langchain Agents/: Agents-in-Langchain.ipynb
Langchain Chains/: conditional_chains.py  parallel_chains.py  sequential_chains.py  simple_chain.py
Langchain Document Loaders/: csv_loader.py  directory_loader.py  pdf_loader.py  text_loader.py  webbase_loader.py
Langchain Models/ChatModels/: chatmodel_hf_local.py  chatmodel_openai.py
Langchain Models/EmbeddedModels/: embedding_ollama.py
Langchain Output Parsers/: StructuredOutputParser.py  jsonOutputParser.py  pydanticOutputParser.py  strOutputParser.py
Langchain Prompts/: chat_history.txt  chatbot01.py  chatbot02.py  chatbot03.py  chatbot04.py  chatbot05.py  prompt_ui(ResearchPaperExplaner).py
Langchain RAG/: rag-using-Langchain.ipynb
Langchain Retrievers/: langchain_retrievers.ipynb
Langchain Runnables/: runnable_branch.py  runnable_lambda.py  runnable_parallel.py  runnable_passthrough.py  runnable_sequence.py
Langchain Structured Outputs/: With_structured_output_Pydantic.py  With_structured_output_json.py  With_structured_output_typeddict.py  json_schema.json  pydantic_demo.py  typedict_demo.py
Langchain Text Splitters/: length_based.py  markdown_splitting.py  python_code_splitting.py  semantic_meaning_based_splitting.py  text_structure_based.py
Langchain Tools/: tool-calling-in-Langchain.ipynb  tools-in-Langchain.ipynb
Langchain Vector Stores/: langchain_chroma.ipynb
(+2 files in other folders)
