[metadata]
name = langchain-projects
version = 1.0.0
author = Your Name
description = A collection of LangChain projects and implementations

[options]
packages = find:
python_requires = >=3.8
install_requires =
    langchain
    langchain-core
    langchain-openai
    langchain-anthropic
    langchain-google-genai
    python-dotenv
    streamlit
